# Rag_Bot_Odyessy-BE

./: .env  Dockerfile  pyproject.toml  requirements.txt  temp_63d7f363-f106-43eb-8f7f-d665cd179363.txt  test.db
app/: auth.py  config.py  db.py  history_handlers.py  main.py  requirements.txt  vercel.json
app/models/: user_models.py
app/routes/: auth_routes.py  chat.py  user_routes.py
app/schemas/: ai_schemas.py  user_schemas.py
chatbots/29a427ca-748c-4ad0-9ef3-56761ace27bf/: metadata.json
chatbots/36966217-350b-4c0a-9b12-37c9ffe19207/: metadata.json
chatbots/3b6d482c-e3d4-48f7-9317-899fbf465163/: metadata.json
chatbots/41cded8f-b8d2-40f1-88cf-57e201509030/: metadata.json
chatbots/469f8364-5eb2-47a9-913b-10bad6157407/: metadata.json
chatbots/79e2e23a-a363-4a3b-b36b-0a3331467663/: metadata.json
chatbots/7c96786f-e524-48bb-a413-7f77bdb45c91/: metadata.json
chatbots/a7f0cf06-2b73-4c85-9708-1e7261e3e972/: metadata.json
chatbots/aa777a77-7d50-48dc-b2fd-3aa5e0c45840/: metadata.json  source.txt
chatbots/b642ac76-8134-4f8a-aab2-57de829cbfa3/: metadata.json
chatbots/b80112fe-acfe-47b4-a9b5-b5038b263b1a/: source.txt
chatbots/fb66d2dd-f8f6-4ee0-b728-7bafa9c64f47/: metadata.json
chroma/: chroma.sqlite3
files/: docs.txt
